# bevy_fft

./: .gitignore  AGENTS.md  Cargo.toml  README.md  ROADMAP.md
assets/: fft.wgsl  fft_im.ktx2  fft_re.ktx2  generate_test_patterns.py  ifft.wgsl  pattern.wgsl
assets/dispersive/: dispersive.wgsl
assets/ewave/: ewave.wgsl
assets/examples/: band_pass.wgsl  pattern.wgsl
assets/ocean/: init_h0.wgsl  ocean_foam.wgsl  ocean_spectrum.wgsl
assets/shallow_water/: simulator.wgsl
docs/: shallow_water.md
examples/: fft.rs
examples/dispersive/: main.rs
examples/ewave/: main.rs
examples/fft/: band_pass.rs  main.rs  pattern.rs  ui.rs
examples/ocean/: main.rs
examples/shallow_water/: main.rs
src/: c32.wgsl  fft.wgsl  generate_roots.wgsl  lib.rs  prelude.rs
src/complex/: c32.wgsl  c32_2.wgsl  c32_3.wgsl  c32_4.wgsl  image.rs  mod.rs  mul.wgsl
src/dispersive/: mod.rs  physics.rs  render.rs  surface.wgsl
src/ewave/: mod.rs  render.rs  surface.wgsl
src/fft/: bindings.wgsl  buffer.wgsl  fft.wgsl  fft_common.wgsl  ifft.wgsl  mod.rs  node.rs  ocean.wgsl  packing.wgsl  plot.wgsl  prelude.rs  resolve_outputs.wgsl  resources.rs  texel.wgsl
src/ocean/: mod.rs  ocean.wgsl  render.rs
src/shallow_water/: mod.rs  render.rs  surface.wgsl
