[package]
name = "bevy_fft"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { path = "../bevy", version = "0.16.0-dev", features = ["file_watcher"] }
bevy_app = { path = "../bevy/crates/bevy_app", version = "0.16.0-dev" }
bevy_asset = { path = "../bevy/crates/bevy_asset", version = "0.16.0-dev", features = ["file_watcher"] }
bevy_core_pipeline = { path = "../bevy/crates/bevy_core_pipeline", version = "0.16.0-dev" }
bevy_ecs = { path = "../bevy/crates/bevy_ecs", version = "0.16.0-dev" }
bevy_image = { path = "../bevy/crates/bevy_image", version = "0.16.0-dev" }
bevy_log = { path = "../bevy/crates/bevy_log", version = "0.16.0-dev" }
bevy_math = { path = "../bevy/crates/bevy_math", version = "0.16.0-dev" }
bevy_reflect = { path = "../bevy/crates/bevy_reflect", version = "0.16.0-dev" }
bevy_render = { path = "../bevy/crates/bevy_render", version = "0.16.0-dev" }
bevy_utils = { path = "../bevy/crates/bevy_utils", version = "0.16.0-dev" }
gigs = "0.1.1"
half = "2.4.1"
bytemuck = "1"
image = { version = "0.25.2", default-features = false }

[[example]]
name = "fft"
path = "examples/fft.rs"

[features]
file_watcher = ["bevy/file_watcher"]