[package]
name = "bevy_fft"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18.1"
bytemuck = "1.24"
image = { version = "0.25", default-features = false }

[[example]]
name = "fft"
path = "examples/fft/main.rs"

[[example]]
name = "ocean"
path = "examples/ocean/main.rs"
required-features = ["free_camera"]

[[example]]
name = "shallow_water"
path = "examples/shallow_water/main.rs"
required-features = ["free_camera"]

[[example]]
name = "ewave"
path = "examples/ewave/main.rs"
required-features = ["free_camera"]

[dev-dependencies]
bevy_egui = "0.39"

[features]
file_watcher = ["bevy/file_watcher"]
free_camera = ["bevy/free_camera"]
